crates/math-core/tests/snapshots/error_test__limits_in_bad_spot.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\int^\\limits a"
---
Error: Got "\limits", which may only appear after \int, \sum, ....
   ╭─[ <input>:1:6 ]
   │
 1 │ \int^\limits a
   │      ───┬───  
   │         ╰───── may only appear after \int, \sum, ...
───╯
